fix location now is functional
